--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,20 @@
 @import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
 
+@font-face {
+  font-family: 'BebasNeueBold';
+  src: url('../fonts/BebasNeueBold.eot?#iefix') format('embedded-opentype'),  url('../fonts/BebasNeueBold.otf')  format('opentype'), url('../fonts/BebasNeueBold.woff') format('woff'), url('../fonts/BebasNeueBold.ttf')  format('truetype'), url('../fonts/BebasNeueBold.svg#BebasNeueBold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BebasNeueBook';
+  src: url('../fonts/BebasNeueBook.eot?#iefix') format('embedded-opentype'),  url('../fonts/BebasNeueBook.woff') format('woff'), url('../fonts/BebasNeueBook.ttf')  format('truetype'), url('../fonts/BebasNeueBook.svg#BebasNeueBook') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container{ width: 1170px; margin: 0 auto; }
 .group { display: block; }
 .group:after { clear: both; content: "."; display: block; height: 0; line-height: 0; visibility: hidden; }
@@ -18,45 +32,59 @@ ul { padding: 0; margin:0;  }
 ul li { line-height: 20px; list-style:none;  }
 ol { list-style-type: decimal; }
 
-
+/*
 .col-3 { width:25%; float:left; box-sizing:border-box; }
 .col-4 { width:33.33%; float:left; box-sizing:border-box; }
 .col-5 { width:35%; float:left; box-sizing:border-box; }
 .col-6 { width:50%; float:left; box-sizing:border-box; padding: 0 15px; }
 .col-7 { width:65%; float:left; box-sizing:border-box; }
 .col-8 { width:75%; float:left; box-sizing:border-box; }
+*/
+
 
 /*----------------------------------------------------------------------------------------------------*/
 /* HEADER */
 /*----------------------------------------------------------------------------------------------------*/
-#header { padding: 10px 0; background:#fff;  }
+#header { padding: 10px 0; background:#fff; z-index: 1;}
 #header .logo { display: block;  }
 #header .logo2 { width:10px; height:10px; padding-left: 4px; }
 #header ul.menu { display: inline-block; margin-top: 10px; }
 #header ul.menu > li { float: left;  position: relative; height: 40px; line-height: 44px; }
-#header ul.menu li a { display: block; padding: 9px 20px; }
-#header ul.sub-menu2 li { display: block; }
+#header ul.menu li a { display: block; padding: 9px 15px; }
+#header ul.menu ul.sub-menu2 li { display: block; }
 #header ul.menu li a:hover { color: #fff4f4; }
-#header ul.sub-menu li a:hover { background-color: #FF5344;  }
-#header ul.sub-menu { display: none; position: absolute; top: 60px; left:-9px; background-color: #f9f9f9; width: 250px; margin-left: 10px; height: 354px;}
-#header ul.sub-menu2 { display: none; position: absolute; top: 40px; left:-25px; background-color: #f9f9f9; width: 250px; height: 354px;}
-#header ul.menu > li:hover > ul.sub-menu { display: block;  }
-#header ul.sub-menu > li:hover > ul.sub-menu2 { display: block; margin: -40px 280px 0 260px;  }
-#header ul.sub-menu li { min-height: 40px;   }
+#header ul.menu ul.sub-menu li a:hover { background-color: #FF5344;  }
+#header ul.menu ul.sub-menu { display: none; position: absolute; top: 60px; left:-9px; z-index:999; background-color: #f9f9f9; width: 250px; margin-left: 10px; height: 354px;}
+#header ul.menu ul.sub-menu2 { display: none; position: absolute; top: 40px; left:-25px; background-color: #f9f9f9; width: 250px; height: 354px;}
+#header ul.menu > li:hover ul.sub-menu { display: block; }
+#header ul.menu ul.sub-menu > li:hover > ul.sub-menu2 { display: block; margin: -40px 280px 0 260px;  }
+#header ul.menu ul.sub-menu li { min-height: 40px;   }
 .sticky { position: fixed; top:0; left:0; width: 100%; }
+.slicknav_menu { display:none; }
+/*----------------------------------------------------------------------------------------------------*/
+/* BANNER
+/*----------------------------------------------------------------------------------------------------*/
 
-
+#banner { height: 500px; background: url('../images/ui/home-banner.jpg') no-repeat scroll 0 0/cover; margin: 0 auto;  }
+#banner h1 { display: block; }
+#banner .sub-title { font-size: 34px; }
+#banner .contactus{ margin: 0 auto; padding: 12px 30px !important; color: #fff; font-family: 'Montserrat',sans-serif !important; border: 4px solid #ff5344; font-size: 25px !important; line-height: 28px !important; text-transform: uppercase; display: block; width: 250px; text-align: center; background-color: #ff5345; } 
+#banner .bx-wrapper { border: 0; background: none; box-shadow:none; padding-top: 100px; }
+#banner .bx-wrapper span, #banner .bx-wrapper .sub-title { display: block; text-align: center; text-transform: uppercase; }
+#banner .bx-wrapper .title { font-size: 50px; font-family: 'BebasNeueBold',Arial,Helvetica,sans-serif !important; padding-bottom: 10px; line-height: 55px; margin-bottom: 0 !important; }
+#banner .bx-wrapper .sub-title { font-size: 34px; font-family: 'BebasNeueBook'; margin: 10px 0 0; }
+#banner .bx-wrapper ul li { height:110px; }
 /*----------------------------------------------------------------------------------------------------*/
 /* CONTENT
 /*----------------------------------------------------------------------------------------------------*/
 
-#content .sub-title{ text-align: center; display: block; font-size: 24px; background-color:#fffbfb; font-family: 'Kaushan Script',sans-serif !important; color: #333; padding-bottom: 0; margin-bottom: 0; }
+#content .sub-title{ text-align: center; display: block; font-size: 24px; background-color:#fffbfb; font-family: 'Kaushan Script',sans-serif !important; color: #333; padding-bottom: 0; margin-bottom: 0; margin-top: 40px; }
 
 #content .heading { text-align: center; display: block; font-size: 30px; color: #333; font-family: 'Montserrat',sans-serif !important; background: url('../images/ui/heading-line.png') no-repeat center bottom; padding-bottom: 35px; }
 
 #content ul.service { margin-top: 100px; }
 #content ul.service h2 {color: #333; font-size: 17px; line-height: 24px; margin: 0 0 5px; font-weight: 500 !important; }
-#content ul.service span.text-inner{ float: left; width: 70%; padding:0 10px; }
+#content ul.service span.text-inner{ float: left; width: 80%; padding:0 10px; }
 #content ul.service li  { margin-bottom: 40px; }
 #content ul.service li span.img { width:40px; height: 40px; display: inline-block; background: url('../images/ui/services.png') no-repeat scroll 0 0; float: left; }
 #content ul.service li span.web-portal { background-position: 0 -40px; }
@@ -66,7 +94,8 @@ ol { list-style-type: decimal; }
 #content ul.service li span.marketing{ background-position: 0 -200px; } 
 #content ul.service li span.branding{ background-position: 0 -240px; }
 #content ul.service span.desc { line-height:28px; }
-#content ul.service li.last { width: 100%; text-align: center; }
+#our-clients .index { z-index: -1; }
+#content ul.service li.last { text-align: center; max-width: 100%; flex: auto; }
 #content ul.service li.last .text-outer { display: inline-block; max-width: 390px; text-align: left; }
 .owl-carousel .owl-item > div { text-align: center; margin: 60px 0; }
 .owl-carousel .owl-item > div img { width: auto; display: inline-block;}
@@ -74,14 +103,16 @@ ol { list-style-type: decimal; }
 /*----------------------------------------------------------------------------------------------------*/
 /* FOOTER */
 /*----------------------------------------------------------------------------------------------------*/
-#footer { background-color:#464646; margin: 0 auto; }
+#footer { background-color:#464646; padding: 80px 0 0; }
 #footer h4 { color: #cecece; font-family: 'Lato',sans-serif; font-weight: 500; font-size: 23px; text-transform: capitalize; margin-bottom: 15px; }
 #footer p { font-size: 15px !important; color: #999; }
 #footer form { margin: 0; padding: 15px 15px 15px 0; }
-#footer input { width: 220px; height: 42px; color: #464646; font-family: 'Lato',sans-serif; font-weight: 300; font-style: italic; font-size: 15px; margin-right: 0; border: none; float: left; padding: 0 10px; }
-#footer .submit { width: 144px; height: 42px; background: #FF5345; font-weight: 700; font-style: normal; font-family: 'Montserrat',sans-serif !important; font-size: 14px; color: #fff; border: none; cursor: pointer; }
+#footer input { width: 220px; height: 42px; color: #464646; font-family: 'Lato',sans-serif; font-weight: 300; font-style: italic; font-size: 15px; margin-right: 0; border: none; float: left; padding: 0 10px; margin-bottom: 10px;}
+#footer .submit { width: 101px; height: 42px; background: #FF5345; font-weight: 700; font-style: normal; font-family: 'Montserrat',sans-serif !important; font-size: 14px; color: #fff; border: none; cursor: pointer; }
 #footer span { font-size: 22px; line-height: 25px; font-family: 'Lato',sans-serif; font-weight: 500; margin-right: 15px; font-style: italic; color: #999; box-sizing: border-box; float:left; }
-#footer .text-widget { box-sizing: border-box; display: table-cell; vertical-align: middle;}
+#footer .container { margin-bottom:50px; }
+#footer .container.last { margin-bottom: 0; }
+#footer .text-widget { box-sizing: border-box; float: right; margin-top: 9px;}
 #footer .socialmedia { display: inline-block; }
 #footer .socialmedia li { float: left; padding: 0 10px; }
 #footer .socialmedia li a { background: url('../images/ui/socialmedia.png') no-repeat scroll 0 0; height: 25px; width: 25px; display: block; }
@@ -94,19 +125,62 @@ ol { list-style-type: decimal; }
 #footer .socialmedia li a.gplus:hover { background-position: 0 -200px; }
 #footer .socialmedia li a.in { background-position: 0 -100px; }
 #footer .socialmedia li a.in:hover { background-position: 0 -225px; }
-#footer .icons { width: 50%; float: left; box-sizing: border-box; padding: 0 15px; display: table; height: 150px; }
+#footer .icons { float: left; box-sizing: border-box; padding: 0 15px; display: table; height: 150px; }
 #footer .lmenu li {line-height: 20px; list-style:none; padding: 10px 0px; }
 #footer .lmenu  li a { color: #c5c5c5; }
 #footer .lmenu  li a:hover { color: #ffffff }
-#footer .gap, #footer .copyright { padding: 20px 15px 0 15px; box-sizing: border-box; margin-top: 50px;}
-#footer .lfoot { text-align: center; border-top: 2px solid gray; color: #ffffff; padding: 20px 0 20px ; }
-#footer .combine { margin: 114px 0 0 200px; }
+#footer .footer-links, #footer .copyright { padding: 0 15px; box-sizing: border-box;  }
+#footer .copyright { border-top: 2px solid #ccc; }
+#footer .lfoot { text-align: center; color: #ffffff; padding: 20px 0; }
+#footer .combine { margin: 0; }
 
 
 /*----------------------------------------------------------------------------------------------------*/
 /* RESPONSIVE CSS */
 /*----------------------------------------------------------------------------------------------------*/
 
-@media(min-width: 320px)and(max-width: 767px) {
-   .container { width: 100%; }
+@media (min-width:768px) and (max-width:1024px) {
+	
+   #header ul.menu { display:none; }
+   #header .row { position: relative; }
+   #header .row div.col-md-7 { position: absolute; right: 0; z-index: 9; padding: 0; top: 15px; }
+   #header .slicknav_nav a { color: #000; }
+   #header .slicknav_menu { display:block; background: none!important; position: relative; }
+   #header .slicknav_nav { background: #fff; position: absolute; top: 70px; width: 97%;}
+   #header .slicknav_btn { text-shadow: none!important; background: none!important; }
+   
+   #banner .bx-wrapper .title, #banner .bx-wrapper .sub-title { font-size: 24px; line-height: 24px; }
+   #banner .bx-wrapper { padding-top: 80px; margin-bottom: 0; }
+   #banner { height: 350px; }
+	
 }
+
+
+@media (min-width:320px) and (max-width:767px) {
+   .container { width: 100%; } 
+   
+   #header ul.menu { display:none; }
+   #header .row { position: relative; }
+   #header .row div.col-md-7 { position: absolute; right: 0; z-index: 9; padding: 0; top: 15px; }
+   #header .slicknav_nav a { color: #000; }
+   #header .slicknav_menu { display:block; background: none!important; position: relative; }
+   #header .slicknav_nav { background: #fff; position: absolute; top: 70px; width: 97%;}
+   #header .slicknav_btn { text-shadow: none!important; background: none!important; }
+   
+   #banner .bx-wrapper .title, #banner .bx-wrapper .sub-title { font-size: 20px; line-height: 20px; }
+   #banner .bx-wrapper { padding-top: 30px; margin-bottom: 0; }
+   #banner { height: 250px; }
+   
+   #content ul.service { margin-top: 40px; }
+   #content ul.service span.text-inner { width: 85%; }
+   #content .heading { font-size: 26px; }
+   
+   #footer .container { margin-bottom: 15px; }
+   #footer .socialmedia li { padding: 0 5px; }
+   #footer .icons { height: auto; margin-top: 15px; }
+   #footer .submit { display: block; margin: 0 auto; }
+   #footer input { width: 63%; margin: 0 0 10px; }
+   
+}
+
+
